# selenium-grafana

./: README.md  setup.cfg
selenium-grafana/: grafana_test.py
tools/: clean-browser.sh  download-browser.sh  run_test.sh
